@@ -1,5 +1,17 @@
 2007-08-30  Vincent Torri  <doursse at users dot sf dot net>
 
+	* src/bin/epdf_etk_test.c: (main), (_tree_fill):
+	remove trailing spaces
+
+	* src/lib/poppler_document.cpp:
+	* src/lib/poppler_document.h:
+	* src/plugins/epsilon/epsilon_thumbnailer.c:
+	(epsilon_generate_thumb):
+	remove epdf_document_page_get from the api (duplicate of
+	epdf_page_new). Update epsilon thumbnailer.
+
+2007-08-30  Vincent Torri  <doursse at users dot sf dot net>
+
 	* acinclude.m4:
 	* configure.in:
 	use AC_LIBTOOL_LANG_F77_CONFIG instead of
